--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Open Source Sustainability
 email: oss.sustainability.lab@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   The OSS Sustainability Lab targets skills scientific researchers historically struggle with -- like community engagement, interdisciplinary networking, mentorship and professional pipelines, and measuring community health.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/OSSSL-website" # the subpath of your site, e.g. /blog
+url: "https://oss-sustainability-lab.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username:
 
