--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -14,12 +14,20 @@ eriol-fox:
   name: Eriol Fox
   img: eriol-fox.jpg
   bio: |
-    Bio information for Eriol Fox will go here.
+    <strong>Eriol Fox</strong> has been working as a designer for 15+ years working in for-profits and then NGO's and open-source software organisations, working on complex problems like sustainable food systems, peace-building, crisis response technology, private secure communication tools and censorship circumvention OSS. Eriol now works on smart hardware in the design team at a large OSS foundation.
+    
+    They are also part of the core teams at Open Source Design (<a href="http://opensourcedesign.net/" target="_blank" rel="noopener">http://opensourcedesign.net/</a>) and Sustain UX & Design working group (<a href="https://sustainoss.org/working-groups/design-and-ux/" target="_blank" rel="noopener">https://sustainoss.org/working-groups/design-and-ux/</a>) and help hosts podcast about open source and design (<a href="https://sosdesign.sustainoss.org/" target="_blank" rel="noopener">https://sosdesign.sustainoss.org/</a>)
+    
+    Eriol is a non-binary, queer person who uses they/them pronouns.
 
 camille-acey:
   name: Camille Acey
   bio: |
-    Bio information for Camille Acey will go here.
+    Camille Acey is a former tech worker, a mom, a community organizer, and a conscious closures consultant. She runs <a href="https://www.wind-down.org/" target="_blank" rel="noopener">The Wind Down</a>, an independent studio supporting charities, nonprofits, cooperatives, and other social impact projects and organizations in exploring, designing, and delivering better mergers and endings.
+    
+    Over the past 25 years, Camille has worked with student housing cooperatives, tech startups, open source projects, non-profits, and activist groups. Camille was a co-founder of the <a href="https://colet.space/" target="_blank" rel="noopener">Collective for Liberation, Ecology, and Technology (CoLET)</a>, a radical feminist tech collective. She also served as an advisor to The Ada Initiative (now defunct) and <a href="https://themaintainers.org/" target="_blank" rel="noopener">The Maintainers</a>, as well as board chair for <a href="https://whoseknowledge.org/" target="_blank" rel="noopener">Whose Knowledge?</a>, a global feminist NGO focused on elevating marginalized voices. She brings her experience with messy departures and endings to the work of improving organizational closure and project conclusions.
+    
+    Camille is a graduate of University of California at Berkeley (Political Science/ Ethnic Studies) and Columbia University's Internship In Building Community program. You can see <a href="https://www.linkedin.com/in/camille-acey/" target="_blank" rel="noopener">Camille's extended experience on LinkedIn</a>.
 
 emma-irwin:
   name: Emma Irwin
@@ -29,4 +37,9 @@ emma-irwin:
 michelle-barker:
   name: Michelle Barker
   bio: |
-    Bio information for Michelle Barker will go here.
+    Michelle Barker is a change agent facilitating system change in the research sector to solve global challenges through digital transformation. I have extensive expertise in open science policy, AI-driven research tools, scientific software sustainability, digital workforce capability, open research reward structures and career paths, and research infrastructure. As a sociologist, I am passionate about building collaborative partnerships to achieve system change. I work part-time as the Director of the <a href="https://www.researchsoft.org/" target="_blank" rel="noopener">Research Software Alliance</a>, and part-time as an <a href="https://www.linkedin.com/in/michelledbarker/" target="_blank" rel="noopener">independent consultant</a> specialising in aspects of open science.
+
+dawn-foster:
+  name: Dawn Foster
+  bio: |
+    Bio information for Dawn Foster will go here.
