remove test content

--- a/_data/cirrciulum.yml
+++ b/_data/cirrciulum.yml
@@ -8,11 +8,11 @@
       slug: the-abolitionist-horizon
   resources:
     - title: Abolition as Sustainability
-      url: https://www.youtube.com/watch?v=dQw4w9WgXcQ
+      url: 
       author: Miliaku Nwabueze
       slug: abolition-as-sustainability
     - title: Sunsetting
-      url: https://www.youtube.com/watch?v=dQw4w9WgXcQ
+      url: 
       author: Camille Acey
       slug: sunsetting
 
